--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <app></app>
 <category></category>
 <notes></notes>
-<script type="text/javascript" src="/bower_components/riot/riot+compiler.min.js"></script>
-<script type="riot/tag" src="/tags/app.tag"></script>
-<script type="riot/tag" src="/tags/category.tag"></script>
-<script type="riot/tag" src="/tags/notes.tag"></script>
-<script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="./bower_components/riot/riot+compiler.min.js"></script>
+<script type="riot/tag" src="./tags/app.tag"></script>
+<script type="riot/tag" src="./tags/category.tag"></script>
+<script type="riot/tag" src="./tags/notes.tag"></script>
+<script type="text/javascript" src="./scripts/app.js"></script>
 </body>
 </html>
