--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <category></category>
 <notes></notes>
 <script type="text/javascript" src="./bower_components/riot/riot+compiler.min.js"></script>
+<script type="text/javascript" src="./bower_components/riot-route/dist/route.min.js"></script>
 <script type="riot/tag" src="./tags/app.tag"></script>
 <script type="riot/tag" src="./tags/category.tag"></script>
 <script type="riot/tag" src="./tags/notes.tag"></script>
